packages/default/scss/pivotgrid/_layout.scss
@include exports("pivotgrid/layout") {

    // Pivotgrid
    .k-pivotgrid {
        padding: $pivotgrid-padding-y $pivotgrid-padding-x;
        border-width: $pivotgrid-border-width;
        border-style: solid;
        box-sizing: content-box;
        font-size: $pivotgrid-font-size;
        font-family: $pivotgrid-font-family;
        line-height: $pivotgrid-line-height;
        text-align: left;
        vertical-align: top;
        display: grid;
        grid-template-columns: $pivotgrid-row-header-width auto;
        grid-template-rows: $pivotgrid-column-header-height auto;
        position: relative;

        table {
            margin: 0;
            width: 100%;
            max-width: none;
            border-width: 0;
            border-color: inherit;
            border-collapse: separate;
            border-spacing: 0;
            outline: 0;
            empty-cells: show;
        }

        thead,
        tbody,
        th,
        tr,
        td {
            border-color: inherit;
        }
    }


    // Table Layout
    .k-pivotgrid-table {
        table-layout: fixed;

        th {
            font-weight: 400;
            text-transform: initial;
        }

        .k-pivotgrid-header-root {
            font-weight: 600;
            text-transform: uppercase;
        }
    }


    // Header empty cell
    .k-pivotgrid-empty-cell {
        border-right-style: solid;
        border-right-width: $pivotgrid-cell-border-width;
        border-bottom-style: solid;
        border-bottom-width: $pivotgrid-cell-border-width;
    }


    // Column Headers
    .k-pivotgrid-column-headers {
        overflow: hidden;
    }

    .k-pivotgrid-column-headers .k-pivotgrid-table {
        padding-inline-start: 0;
        padding-inline-end: var(--kendo-scrollbar-width, #{$default-scrollbar-width});
    }

    .k-pivotgrid-column-headers .k-pivotgrid-cell {
        border-bottom-style: solid;
        border-bottom-width: $pivotgrid-cell-border-width;
        border-left-style: solid;
        border-left-width: $pivotgrid-cell-border-width;

        &:first-child {
            border-left-width: 0;
        }

        &.k-first {
            border-left-width: $pivotgrid-cell-border-width;
        }
    }


    // Row Headers
    .k-pivotgrid-row-headers {
        overflow: hidden;
    }

    .k-pivotgrid-row-headers .k-pivotgrid-cell {
        border-right-style: solid;
        border-right-width: $pivotgrid-cell-border-width;
        border-bottom-style: solid;
        border-bottom-width: $pivotgrid-cell-border-width;
        white-space: nowrap;
    }


    // Values
    .k-pivotgrid-values {
        border-color: inherit;
        overflow-x: auto;
        overflow-y: scroll;
    }

    .k-pivotgrid-values .k-pivotgrid-cell {
        border-bottom-style: solid;
        border-bottom-width: $pivotgrid-cell-border-width;
        border-left-style: solid;
        border-left-width: $pivotgrid-cell-border-width;

        &:first-child {
            border-left-width: 0;
        }
    }

    .k-pivotgrid-cell {
        padding: $pivotgrid-cell-padding-y $pivotgrid-cell-padding-x;
        text-overflow: ellipsis;
        vertical-align: top;
        overflow: hidden;
    }

    .k-pivotgrid-cell .k-icon {
        cursor: pointer;
    }

    .k-pivotgrid-total {
        font-weight: 600;
    }

    // Column menus
    .k-column-menu .k-treeview {
        padding: $pivotgrid-treeview-padding-y $pivotgrid-treeview-padding-x;
        overflow: auto;
    }

}
/* ... */

