fix(pivotgrid): prevent text wrapping in pivotgrid cells

--- a/packages/default/scss/pivotgrid/_layout.scss
+++ b/packages/default/scss/pivotgrid/_layout.scss
@@ -124,6 +124,7 @@
     .k-pivotgrid-cell {
         padding: $pivotgrid-cell-padding-y $pivotgrid-cell-padding-x;
         text-overflow: ellipsis;
+        white-space: nowrap;
         vertical-align: top;
         overflow: hidden;
     }
